InfraPlatform/eks/v5/cf-nlb-tg-alb.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Provision NLB with ALB Target Group v5.0
Parameters:
  AppShortName:
    Type: String
    Description: AppShortName
  EnvName:
    Type: String
    Description: Environment
    AllowedValues:
      - nprd
      - nprd-dev
      - nprd-dev1
      - nprd-dev2
      - nprd-sit1
      - nprd-sit2
      - nprd-sit3
      - nprd-sit
      - nprd-sit-a
      - nprd-sit-b
      - nprd-sit-c
      - nprd-uat
      - nprd-uat-a
      - nprd-uat-b
      - nprd-uat-c      
      - nprd-pt
      - nprd-pp
      - nprd-pp-a
      - nprd-pp-b
      - nprd-pp-c
      - prod
      - prod-a
      - prod-b
      - prod-c
  Function:
    Type: String
    Description: Server Function (eg, APP, UTL, DB)
    AllowedValues:
      - APP
      - WEB
  AppSubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: VPC Subnet ids for App
  IngressALBArn:
    Type: String
    Description: Ingress ALB Arn
  VpcId:
    Type: String
    Description: VPC ID
  HealthCheckPath:
    Type: String
    Description: Health Check Path
  InternetALBSubnetAZ1:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ1 (optional)
    Default: ''
  InternetALBSubnetAZ2:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ2 (optional)
    Default: ''
  InternetALBSubnetAZ3:
    Type: String
    Description: Internet ALB Subnet CIDR for AZ3 (optional)
    Default: ''
  HSGWSubnet1:
    Type: String
    Description: HSGW Subnet/IP 1 (optional)
    Default: ''
  HSGWSubnet2:
    Type: String
    Description: HSGW Subnet/IP 2 (optional)
    Default: ''

Conditions:
  IsProduction: !Or [!Equals [!Ref "EnvName", "prod"], !Equals [!Ref "EnvName", "prod-a"], !Equals [!Ref "EnvName", "prod-b"], !Equals [!Ref "EnvName", "prod-c"]]
  HasIngressALBArn: !Not [!Equals [!Ref IngressALBArn, '']]
  HasInternetALBSubnetAZ1: !Not [!Equals [!Ref InternetALBSubnetAZ1, '']]
  HasInternetALBSubnetAZ2: !Not [!Equals [!Ref InternetALBSubnetAZ2, '']]
  HasInternetALBSubnetAZ3: !Not [!Equals [!Ref InternetALBSubnetAZ3, '']]
  HasHSGWSubnet1: !Not [!Equals [!Ref HSGWSubnet1, '']]
  HasHSGWSubnet2: !Not [!Equals [!Ref HSGWSubnet2, '']]

Resources:
  IngressNLB:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
    Properties:
      IpAddressType: "ipv4"
      Subnets: !Ref AppSubnetIds  
      Type: "network"
      Scheme: "internal"
      Name: !Sub ${AppShortName}-${EnvName}-${Function}-ingress-NLB
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v5

  IngressNLBTG:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete] 
    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
    Properties:
      IpAddressType: "ipv4"
      HealthCheckIntervalSeconds: 30
      Matcher:
        HttpCode: "200-399"
      HealthCheckPath: !Ref HealthCheckPath
      Port: 443
      Targets:
      - !If
        - HasIngressALBArn
        - Port: 443
          Id: !Ref IngressALBArn
        - !Ref "AWS::NoValue"
      HealthCheckEnabled: true
      UnhealthyThresholdCount: 3
      HealthCheckTimeoutSeconds: 10
      Name: !Sub ${AppShortName}-${EnvName}-${Function}-ingress-NLB-TG
      VpcId: !Ref VpcId
      HealthyThresholdCount: 3
      HealthCheckProtocol: "HTTPS"
      TargetType: "alb"
      HealthCheckPort: "traffic-port"
      Protocol: "TCP"
      Tags:
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v5

  IngressNLBListener:
    DeletionPolicy: !If [IsProduction, Retain, Delete]
    UpdateReplacePolicy: !If [IsProduction, Retain, Delete]  
    Type: "AWS::ElasticLoadBalancingV2::Listener"
    Properties:
      LoadBalancerArn: !Ref IngressNLB
      Protocol: "TCP"
      DefaultActions:
      - Type: "forward"
        ForwardConfig:
          TargetGroups:
          - TargetGroupArn: !Ref IngressNLBTG
      Port: 443

  IngressNLBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Security Group for Ingress NLB
      GroupName: !Sub ${AppShortName}-${EnvName}-${Function}-ingress-nlb-sg
      VpcId: !Ref VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AppShortName}-${EnvName}-${Function}-ingress-nlb-sg
        - Key: IaCVersion
          Value: InfraPlatform-EKS-v5
      SecurityGroupIngress:
        - !If
          - HasInternetALBSubnetAZ1
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref InternetALBSubnetAZ1
            Description: Allow inbound from Internet ALB Subnet AZ1
          - !Ref "AWS::NoValue"
        - !If
          - HasInternetALBSubnetAZ2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref InternetALBSubnetAZ2
            Description: Allow inbound from Internet ALB Subnet AZ2
          - !Ref "AWS::NoValue"
        - !If
          - HasInternetALBSubnetAZ3
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref InternetALBSubnetAZ3
            Description: Allow inbound from Internet ALB Subnet AZ3
          - !Ref "AWS::NoValue"
        - !If
          - HasHSGWSubnet1
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HSGWSubnet1
            Description: Allow inbound from HSGW Subnet/IP 1
          - !Ref "AWS::NoValue"
        - !If
          - HasHSGWSubnet2
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: !Ref HSGWSubnet2
            Description: Allow inbound from HSGW Subnet/IP 2
          - !Ref "AWS::NoValue"
